--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -19,6 +19,11 @@
 		font-family: 'Nunito', sans-serif;
 	}
 
+	#headers {
+		font-size: 36px;
+		font-weight: 500;
+	}
+
 	article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
 		display: block;
 	}
@@ -3409,7 +3414,7 @@
 				-webkit-flex-direction: row-reverse;
 				-ms-flex-direction: row-reverse;
 				flex-direction: row-reverse;
-				text-align: right;
+				text-align: left;
 			}
 
 			.wrapper.spotlight:nth-child(2n - 1) .image {
