--- a/Website/assets/css/main.css
+++ b/Website/assets/css/main.css
@@ -2661,7 +2661,7 @@
 
 		.features article {
 			padding: 1em 1.75em 0.1em 1.75em ;
-			background-color: #CCCCCC;
+			background-color: #ffe9e569;
 			border-radius: 5px;
 			margin: 1.5em 1.5em 1.5em 0;
 			width: calc(50% - 1.5em);
